# Data-quality-Dashboard

./: .gitignore  LICENSE  README-DEV.md  README.md  pyproject.toml  requirements.txt  run_dashboard.py
API/: APItest.ipynb  apiutil.py  fastAPImain.py
API/results/: data_fds
assets/: dirty_profile_1683276197.html  dirty_profile_1683276328.html
baseline/: base.py
baseline/dataset/: dataset.py  prepare_data.py  preprocess.py
baseline/model/: build_model.py  hyperparams.py  metrics.py  train.py  utils.py
baseline/setup/: create_dirty.py  evaluate.py  utils.py
experiments/hyperparams/: default.json
main/: apicalls.py  app.py  sqlconnection.py  test.py  utils.py
main/assets/: nasa_profile_1718177396.html  nasa_profile_1718177851.html  nasa_profile_1718178463.html  nasa_profile_1719930927.html  nasa_profile_1719995443.html  nasa_profile_1720005435.html  nasa_profile_1720009709.html  nasa_profile_1720086265.html  nasa_profile_1720165272.html  nasa_profile_1720165346.html  nasa_profile_1720165381.html  nasa_profile_1720165449.html  nasa_profile_1720171775.html  nasa_profile_1720171904.html  nasa_profile_1720176857.html  nasa_profile_1720176880.html
main/callbacks/: __init__.py  cb_alerts.py  cb_datasheets.py  cb_fd_detection.py  cb_iterative_cleaning.py  cb_run_detectors.py  cb_run_profiling.py  cb_run_raha.py  cb_run_repair.py  cb_update_table.py  cb_upload_dataset.py  cb_upload_state_management.py
main/layouts/: __init__.py  layout_cleaning.py  layout_dataset.py  layout_datashets.py  layout_profiling.py  layout_upload_data.py
(+46 files in other folders)
